- The MU plane no longer needs to have the sub-solar point specified.
  It was never needed for emission angle calculations.

- The MU0 plane no longer needs to have the sub-observer point and
  range specified.  They were never needed for incidence angle
  computations.

- Improved MaRC input file parser error reporting.  The filename, line
  number and column containing the syntax error are now reported to
  the user.

- Corrected handling of position angles explicity marked as clockwise,
  i.e. "CW", in MaRC input files.  They were erroneously treated as
  counter-clockwise position angles.

- The user-specific MaRC configuration file is now expected to be
  `$XDG_CONFIG_HOME/marc', which is `~/.config/marc' by default, to
  conform to the XDG Base Directory Specification.  The old MaRC
  configuration filename `~/.marc' is no longer supported.

- Added command line option support.  Try "marc --help".

- Improved logging by leveraging the spdlog library as the underling
  logging framework.  This allows for faster logging, and log level
  differentiated output (e.g. text color on terminals that support
  ANSI colors), as well.

- Corrected progress output for the Orthographic map projection so
  that completion percentage is printed up to 100%.

- MERCATOR map entries in MaRC input files may now use options common
  to all MaRC map projections.

- Fixed a mosaic averaging regression that caused weighted and
  unweighted averaging to be disabled if either was selected.

- Added support for generation of code coverage results for g++
  builds.  Try the following to generate the results:
        ./configure --enable-code-coverage
        make check-code-coverage

- Replaced all uses of the MaRC-specific "bodycentric" and
  "bodygraphic" latitude terminology with the NASA NAIF recommended
  "planetocentric" and "planetographic", respectively.

31 January 2018 - MaRC 0.9.10

- Reduced footprint of the MaRC program (`marc') and library